# requestbot

./: .dockerignore  .env.sample  Dockerfile  README.md  config.py  docker-compose.yml  entrypoin.sh  entrypoint.sh  logger_config.py  main.py  pyproject.toml
bot/handlers/: start.py
bot/middlewares/: album_middleware.py  database_middleware.py  user_middleware.py
database/: __init__.py  ini.py
database/alembic/: env.py
database/alembic/versions/: ab0c41a02b46_добавление_новых_таблиц.py
database/enums/: roles.py
database/mixins/: timestamp.py
database/models/: models.py  users.py
localization/: localization.py  locazlization.py
localization/locales/: ru.yml
