[project]
name = "requestbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
